# tytable

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_SUGGESTIONS_FINAL.md  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  docs-release.yml  release.yml
docs/: _common.typ  agent-guide.md  build_examples.py  guides.typ  main.typ  reference.typ  tutorial.typ
docs/assets/flags/: README.md
docs/examples/: 01_basic.py  01_report_ready.py  02_format.py  03_rotated_headers.py  03_style.py  04_group.py  04_targeted_notes.py  05_theme.py  06_widths.py  07_images.py  07_static_images.py  08_full_report.py  09_widths_fixed.py  10_format_fn.py  10_mizani.py  11_format_polars.py  12_resize.py  13_list_selectors.py  14_data_driven.py  15_set_name.py  16_advanced_pipeline.py  17_showcase.py  18_cell_where.py  19_cell_where_active.py  20_selector_gallery.py  sparkline.py
docs/site/: index.html
examples/: basic_table.py  full_report.py  grouped_table.py  sparkline.py  styled_table.py
src/tinytables/: __init__.py  _colors.py  _constants.py  _escape.py  _format.py  _groups.py  _images.py  _indices.py  _render_ascii.py  _render_html.py  _render_typst.py  _resolve.py  _styling.py  _themes.py  _tinytable.py  _utils.py
src/tytable/: __init__.py  _colors.py  _constants.py  _directives.py  _escape.py  _format.py  _groups.py  _images.py  _indices.py  _render_ascii.py  _render_html.py  _render_typst.py  _renderer.py  _resolve.py  _style_markup.py  _styling.py  _themes.py  _types.py  _tytable.py  _utils.py
tests/: conftest.py  helpers.py  test_basic.py  test_colors.py  test_compile.py  test_docs.py  test_format.py  test_grouping.py  test_html.py  test_images.py  test_indices.py  test_perf.py  test_resolve.py  test_row_selectors_v2.py  test_set_name.py  test_styling.py  test_themes.py  test_utils.py
tests/snapshots/: ascii_basic.txt  basic_3x3.txt  basic_typ.txt  caption_bold_color_fontsize.txt  caption_italic_smallcaps.txt  caption_present.txt  fmt_decimal.txt  fmt_full.txt  fmt_preformatted.txt  fmt_significant.txt  footnote_auto_marker.txt  footnote_auto_multiple.txt  footnote_labelled.txt  footnote_multiple.txt  footnote_single.txt  footnote_targeted.txt  group_col_by_name.txt  group_col_multiple_same_row.txt  group_col_single.txt  group_col_stacked_basic.txt  group_col_ungrouped.txt  group_combined.txt  group_delim.txt  group_groupi_background.txt  group_groupi_bold.txt  group_row_end.txt  group_row_multiple.txt  group_row_single.txt  html_basic_2x2.txt  html_basic_3x3.txt  html_caption.txt  html_caption_styled.txt  html_footnote.txt  html_group_col.txt  html_group_row.txt  html_no_colnames.txt  html_notes_bg_align.txt  html_notes_italic_color.txt  html_notes_marker_styled.txt  html_style_bold.txt  (+57 more)
tests/typecheck/: public_api.py
