[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tytable"
dynamic = ["version"]
description = "Typst tables from Polars DataFrames, with a tinytable-inspired API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "tytable" }]
keywords = ["typst", "polars", "tables", "tinytable"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["polars>=1.0"]

[project.optional-dependencies]
images = ["matplotlib>=3.7", "numpy>=1.24"]
dev = [
  "pytest>=8",
  "pytest-snapshot>=0.9",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "polars>=1.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "plotnine>=0.13",
  "hatch-vcs>=0.4",
]

[project.urls]
Homepage = "https://github.com/EinMaulwurf/tytable"

[tool.hatch.build.targets.wheel]
packages = ["src/tytable"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tytable/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
files = ["src/tytable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "typst: tests asserting typst output",
  "html: tests asserting html output",
  "images: tests requiring the images extra",
]

[tool.coverage.run]
source = ["src/tytable"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
fail_under = 80
